fix: 解决了版本冲突和jvm参数设置